--- a/root-window/package.json
+++ b/root-window/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "vite": "^4.0.0"
   }
 }
